# ModularResearchDocWriter

./: LICENSE  README.md  build_backend.py  pyproject.toml
mrm/: __init__.py  cli.py  installer.py
mrm/core/: adapter.py  assembler.py  exceptions.py  indexer.py  validator.py
tests/: test_parser.py
