[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "mrm"
version = "1.0.0"
description = "Installable Codex skill package for mrm."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "fx-kitsune" }
]
keywords = ["codex", "skill", "markdown", "research", "documentation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
mrm = "mrm.cli:main"
mrm-skill-install = "mrm.cli:main"
