[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mrm-toolkit"
version = "1.0.1"
description = "Toolkit hoàn chỉnh để module hóa nghiên cứu và tài liệu cho AI Agents."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "fx-kitsune", email = "fx.kitsune@gmail.com" }
]
keywords = ["mrm", "codex", "skill", "markdown", "research", "documentation", "ai-agent"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Documentation",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "PyYAML>=6.0",
]


[project.urls]
Homepage = "https://fx-kitsune.github.io/mrm-toolkit/"
Repository = "https://github.com/fx-kitsune/mrm-toolkit"
Issues = "https://github.com/fx-kitsune/mrm-toolkit/issues"

[project.scripts]
mrm = "mrm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mrm"]
